--- a/src/Retrica/ui/Camera/camera.module.css
+++ b/src/Retrica/ui/Camera/camera.module.css
@@ -24,6 +24,10 @@
   border-radius: 20px;
 }
 
+.video::-webkit-media-controls {
+  display: none !important;
+}
+
 .selfie {
   transform: scaleX(-1);
 }
