--- a/src/Retrica/ui/Gallery/gallery.module.css
+++ b/src/Retrica/ui/Gallery/gallery.module.css
@@ -71,9 +71,13 @@
     width: 70%;
     font-size: 18px;
   }
+
+  .gallery li img {
+    aspect-ratio: 0.7;
+  }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 520px) {
   .wrapper {
     font-size: 13px;
   }
