--- a/src/Retrica/ui/Camera/camera.module.css
+++ b/src/Retrica/ui/Camera/camera.module.css
@@ -24,6 +24,27 @@
   border-radius: 20px;
 }
 
+.video::-webkit-media-controls-panel {
+  display: none !important;
+  -webkit-appearance: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.video::-webkit-media-controls-play-button {
+  display: none !important;
+  -webkit-appearance: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.video::-webkit-media-controls-start-playback-button {
+  display: none !important;
+  -webkit-appearance: none;
+  opacity: 0;
+  visibility: hidden;
+}
+
 .video::-webkit-media-controls {
   display: none !important;
 }
